minor fixes, first bib

--- a/Paper/attempt2.tex
+++ b/Paper/attempt2.tex
@@ -23,7 +23,7 @@
 \maketitle
 
 \section{Introduction}
-Artificial General Intelligence (AGI), also referred to as Strong AI, is a theoretical artificial intelligence that is characterized by holistic, broad intelligence, that is comparable to that of humans. Its counterpart is Weak or Narrow AI, which is an artificial system that might achieve (or even surpass) human level performance on narrow tasks, but lacks the capacity of expanding its skills and abilities beyond those.
+Artificial General Intelligence (AGI), also referred to as Strong AI, is a theoretical artificial construct that is characterized by holistic, broad intelligence, comparable to that of humans. Its counterpart is Weak or Narrow AI, which is an artificial system that might achieve (or even surpass) human level performance on narrow tasks, but lacks the capacity of expanding its skills and abilities beyond those.
 
 AGI has been a theme that has bothered philosophers since before the establishment of AI or Computer Science as fields of research. This does not come as a surprise, given the intriguing nature of the subject and its ties with yet deeper philosophical questions, relating but not limited to the nature of the human mind, the source of consciousness, the descriptive ability of formal logics and mathemtics, or the connections between computation and intelligence. 
 
@@ -47,9 +47,8 @@ This by no means is to imply that supervised learning as a whole is a failed eff
 Obviously, machine learning is a descendant of connectionism. As such, it does inherit all of its benefits, regardless of whether we are talking about supervised or unsupervised techniques. We begin by briefly reviewing the most important of those.
 
 \paragraph{Emergence}
-Performing computation via the interaction of many small, interconnected units falls within the standard paradigm of emergence \toref ; i.e. the notion that complex behavior can burst out of a system of individually simplistic building blocks that are rather uninteresting when inspected in isolation. The complexity and capacity of systems, according to this world view, far exceeds that of the sum of their parts; it rather lies on their connectedness, their unique means of information transfer and interaction. 
+Performing computation via the interaction of many small, interconnected units falls within the standard paradigm of emergence; i.e. the notion that complex behavior can burst out of a system of individually simplistic building blocks that are rather uninteresting when inspected in isolation. The complexity and capacity of systems, according to this world view, far exceeds that of the sum of their parts; it rather lies on their connectedness, their unique means of information transfer and interaction. Several kinds of neural networks satisfy the conditions set by cognitivist hypotheses of emergence for human-level intelligence \cite{Penna2016, Hopfield1982}.
 
-Emergence is commonly occuring in nature, with the most pronounced example being biological systems. Individual organic life is enabled by the functionalities of many organs, which- however complex- are only capable of very minor, specialized tasks. At an even lower level, these organs are composed of yet smaller, further specialized subparts, whose role becomes blurry when removed from their system. The same holds for the human brain; functional neuroscience suggests that intelligence is permitted by the pathways formed between neurons in the brain. At a higher level, complex societal structure can arise out of clusters of individuals who are unremarkable on their own, with the most striking cases being insect colonies.
 
 \paragraph{Biological Plausibility}
 The building blocks, in the case of machine learning systems, are artificial neurons. These are heavily inspired by their carbon-based counterparts, bringing forth an argument towards their biological plausibility as means of constructing artificial intelligence. However, dissimilarities due to engineering concessions, in combination with a general lack of understanding of the exact functionality that describes biological neurons, weakens this argument. Still, it makes for an interesting point to keep in mind; it is certainly not unreasonable to hope that, with the field of neuroscience undergoing rapid evolution, more convincing matchings between artificial and biological neural systems will become possible in the coming decade.
@@ -58,13 +57,13 @@ The building blocks, in the case of machine learning systems, are artificial neu
 A chained application of neural transformations (or layers) is the core theme of deep neural networks. These construct increasingly higher-level representations of the input data with each subsequent transformation (or layer). From an intuitive standpoint, this hierarchical representation scheme matches the flow of information as it is seemingly performed by human beings; we are able to go from perceptive-level input to more abstract concepts, without having to consciously process signals from the lower levels when operating at a higher cognitive level. Functionally, it is exactly as if cognition is also organized in a layered manner, even if we cannot make claims about any similarity between the structural form of a neural network and the brain.
 
 \paragraph{Relevance and Generalization}
-A key issue within symbolic AI has been establishing relevance in the presence of an abundance of information \toref. Recognizing which subset of the given input is in fact important for distinguishing between different scenarios and guiding decision making would traditionally require a full processing of the full range of the input; something that seems computationally unfeasible and does not match the way humans argue about the world. The aforementioned hierarchical nature of deep architectures essentially allows for different levels of computation, with each level automatically picking out relevant properties of the previous level's outputs. Additionally, the weighted nature of deep connections could be translated as an efficient means of context-dependant selection, even more so in the case of recurrent or attention-driven systems \toref . Just as humans learn by performing a continuous (i.e. non-sharply separable) distinguishing between classes of situations, without focusing on the minutia of each subcase, neural networks assign weight only on the features deemed important for each particular task, allowing them to generalize over to previously unseen data (i.e. situations).
+A key issue within symbolic AI has been establishing relevance in the presence of an abundance of information \cite{Dreyfus1972-DREWCC}. Recognizing which subset of the given input is in fact important for distinguishing between different scenarios and guiding decision making would traditionally require a full processing of the full range of the input; something that seems computationally unfeasible and does not match the way humans argue about the world. The aforementioned hierarchical nature of deep architectures essentially allows for different levels of computation, with each level automatically picking out relevant properties of the previous level's outputs. Additionally, the weighted nature of deep connections could be translated as an efficient means of context-dependant selection, even more so in the case of recurrent or attention-driven systems \cite{DBLP:journals/corr/MnihHGK14}. Just as humans learn by performing a continuous (i.e. non-sharply separable) distinguishing between classes of situations, without focusing on the minutia of each subcase, neural networks assign weight only on the features deemed important for each particular task, allowing them to generalize over to previously unseen situations (i.e. data).
 
 \paragraph{Adaptability}
 Human intelligence does not collapse in the partial absence or distortion of information. In that same way, neural systems are characterized by extreme noise tolerance, and their property of graceful degradation; as their input becomes incomplete or less reliable, their output quality deteroriates but in a smooth, continuous way. Their ability to operate under noisy data grants them an adapatability that posits yet another argument for their ability to simulate human intelligence. 
 
 \paragraph{Universal Approximation}
-Neural networks have been proven to be able to approximate within any error margin, however small, any function that is computable \toref . Assuming that there is nothing hyper-computational in the way the human brain works, this entails that a neural network would in theory be able to simulate the function that defines human cognition, regardless of how complex that might be\footnote{Hyper-computation in this case refers to computability of non-Turing-computable functions, rather than hyper-efficient computation (i.e. in the sense of a quantum computer).}. 
+Neural networks have been proven to be able to approximate within any error margin, however small, any function that is computable \cite{Cybenko1989} . Assuming that there is nothing hyper-computational in the way the human brain works, this entails that a neural network would in theory be able to simulate the function that defines human cognition, regardless of how complex that might be\footnote{Hyper-computation in this case refers to computability of non-Turing-computable functions, rather than hyper-efficient computation (i.e. in the sense of a quantum computer).}. 
 
 This is indeed a big assumption to make, but it is mandatory if one abides by any of the material-centric monistic philosophies of mind. Granted that hyper-computation is isomorphic to computation over the field of reals, of which no physical analogue exists (at least none that we are aware of), given the quantized nature of the universe as we know it, it could be argued that hyper-computation is in fact not physically plausible. Additionally, arguing against the materialistic nature of cognition is an even weaker and wholly non-evidential assumption to make that essentially cancels out the entire discussion; if there is something beyond the physical plane (of which we have no immediate access over), there would not be a way for us to construct artificial intelligence to begin with.
 
@@ -75,20 +74,20 @@ In any case, having established that there is no theoretical limit to the comput
 \subsection{Supervised Learning}
 Aside from the pros of machine learning as a whole, supervised learning has made tremendous leaps towards tackling long-standing issues of intelligence modelling, some of them recent but others already quite old.
 
-\paragraph{Sensory Processing} Convolutional neural networks have been long established as the de-facto model of image processing. This framework allows for shift (and, more recently, rotation \toref ) invariant processing of minimally processed images, for purposes such as recognition or segmentation. It advanced image processing by a large margin, while remaining to a large degree faithful to its biological equivalent, the visual cortex. It is a prime example of how inspiration from biological systems is quite often the most efficient way of progressing artificial intelligence, and one of the big successes of supervised learning.
+\paragraph{Sensory Processing} Convolutional neural networks have been long established as the de-facto model of image processing. This framework allows for shift and rotation invariant processing of minimally processed images, for purposes such as recognition or segmentation. It advanced image processing by a large margin, while remaining to a large degree faithful to its biological equivalent, the visual cortex. It is a prime example of how inspiration from biological systems is quite often the most efficient way of progressing artificial intelligence, and one of the big successes of supervised learning \cite{Cichy2016}.
 
 \paragraph{Internal Feedback}
-Handling temporal dependencies within sequential data may be accomplished by recurrent networks \toref . Recurrent networks account for past data by feeding the output of their transformations into their future applications, in a step-wise fashion. In that sense, they accomplish a sort of statefulness and internal feedback, which might at first seem ad-hoc, but after closer inspection reveals itself as crucially important for general intelligence. Internal feedback loops are obviously occuring within human thought patterns; it is not uncommon for an external stimulus to provoke a thought, which in turn acts as the trigger for another thought, which finally prompts a reaction. Considering this, recurrency is more than a boost in computational efficiency \toref , but also a very natural and intuitive addition to any interactive system that hopes to capture intelligence.
+Handling temporal dependencies within sequential data may be accomplished by recurrent networks. Recurrent networks account for past data by feeding the output of their transformations into their future applications, in a step-wise fashion. In that sense, they accomplish a sort of statefulness and internal feedback, which might at first seem ad-hoc, but after closer inspection reveals itself as crucially important for general intelligence. Internal feedback loops are obviously occuring within human thought patterns; it is not uncommon for an external stimulus to provoke a thought, which in turn acts as the trigger for another thought, which finally prompts a reaction. Considering this, recurrency is more than a boost in computational efficiency \cite{SIEGELMANN1995132}, but also a very natural and intuitive addition to any interactive system that hopes to capture intelligence \cite{int}.
 
 \paragraph{Memory}
-Memory has been a long-standing issue for neural networks. Despite their amazing performance at information processing, they have been for a long while considered incapable of information storage and retrieval. Recurrent architectures partially bypassed this by implicitly merging computation with memory through their distributed statefulness \toref . 
+Memory has been a long-standing issue for neural networks. Despite their amazing performance at information processing, they have been for a long while considered incapable of information storage and retrieval. Recurrent architectures partially bypassed this by implicitly merging computation with memory through their distributed statefulness \cite{Hinton13}. 
 
-The big breakthrough, however, came by the very recent proposal of attention-based mechanisms \toref . Skipping technical details, attention-based mechanisms can be described as allowing pattern matching and context-sensitive selection to happen on the basis of value similarity. On the side of sensory processing, this accounts for focusing on particular spatial or temporal regions of some high-dimensional sensory input depending on the contexts, in full accord with how human attention works. More importantly, however, it provides a tangible means of content-based addressing within neural architectures, consequently enabling auto-associative memory. Auto-associative memory is considered a fundamental property of human intelligence \toref ; we are admirably able of recovering 'snapshots' (either high or low level) from our long-term memory, when presented with the appropriate sensory stimuli or internal triggers (consider for instance the method of loci \toref , or how a particular sound or smell can bring forth memories of people, places or events). In full opposition to this, computation would traditionally rely on value-based addressing, which requires explicitly stating the position of each particular memory (i.e. tying a variable to a memory address), which would require a dynamically changing look-up table to be somehow implemented within the human-brain, a scenario that seems at best far-fetched.
+The big breakthrough, however, came by the very recent proposal of attention-based mechanism \cite{DBLP:journals/corr/MnihHGK14} . Skipping technical details, attention-based mechanisms can be described as allowing pattern matching and context-sensitive selection to happen on the basis of value similarity. On the side of sensory processing, this accounts for focusing on particular spatial or temporal regions of some high-dimensional sensory input depending on the contexts, in full accord with how human attention works. More importantly, however, it provides a tangible means of content-based addressing within neural architectures, consequently enabling associative memory. Associative memory (both auto or hetero-associative) is considered a fundamental property of human intelligence \cite{blah, Hopfield1982}; we are admirably able of recovering 'snapshots' (either high or low level) from our long-term memory, when presented with the appropriate sensory stimuli or internal triggers. In full opposition to this, computation would traditionally rely on value-based addressing, which requires explicitly stating the position of each particular memory (i.e. tying a variable to a memory address), which would require a dynamically changing look-up table to be somehow implemented within the human-brain, a scenario that seems at best far-fetched.
 
-An example of one of the impressive proposals implementing attentional mechanisms are Neural Turing Machines \toref , an architecture that is unique in its ability to correctly make use of a memory matrix, external but tied to the computational framework. In doing so, it gains the capacity of performing algorithmic inference (learning entire programs, if at least simple, including read/write operations, rather than just functions). This is a truly remarkable achievement from many standpoints; for one, it shows progress on the path of automated code synthesis, one of the high barriers of AI for a long while. At the same time, it may be used to bring more complete, actually implementable models of computational cognition back to the forefront of the discussion.
+Many impressive implementations of attentional mechanisms exists. some of which unique in their ability to make use of a memory matrix, external but tied to the computational framework \cite{NIPS2015_5846, Graves2016}. In doing so, these architectures gain the capacity of performing algorithmic inference (learning entire programs, if at least simple, including read/write operations, rather than just functions). This is a truly remarkable achievement from many standpoints; for one, it shows progress on the path of automated code synthesis, one of the high barriers of AI for a long while. At the same time, it may be used to bring more complete, actually implementable models of computational cognition back to the forefront of the discussion.
 
 \section{The Bad}
-However, supervised learning is not all roses. Leaving aside overarching issues that have been plaguing the field's ideals and scientific standards for a while (see e.g. \toref \ for an opinionated overview), let us focus on where it goes wrong when it comes to AGI.
+However, supervised learning is not all roses; let us focus on where it goes wrong when it comes to AGI.
 
 \paragraph{Data}
 As stated earlier, supervised learning heavily relies on the existence of a plethora of annotated data pairs. These may have indeed become more numerous lately; the world, however, is for the most part unlabeled. Trees do not usually come with a sign that reads "\textit{Tree}" stapled on them, and neither do animals or any other sorts of object or situation. We could not, therefore, throw an infant robot, even if fully equipped with the most efficient supervised algorithm, out there in the open and hope for it to learn how to think or act. 
@@ -101,7 +100,7 @@ Another related problem, intrinsic to the way supervised learning works, is the 
 \section{The Alternative}
 Given the few but extremely severe limitations presented above, the focus turns on how to make use of just the nice things offered by machine learning while escaping the pitfalls of supervised learning on our quest to AGI. The answer is hidden in supervised learning's underappreciated cousin, namely unsupervised learning.
 
-Unsupervised learning architectures utilize neural computation techniques to organize their input in a coherent way by only inspecting their structural form. Classical applications of unsupervised learning include K-means clustering, encoder/decoder systems and feature compression algorithms \toref . A more modern definition would claim that unsupervised architectures revolve around learning to represent data in such a way as to allow its reconstruction given only part thereof.
+Unsupervised learning architectures utilize neural computation techniques to organize their input in a coherent way by only inspecting their structural form. Classical applications of unsupervised learning include K-means clustering, encoder/decoder systems and feature compression algorithms \cite{Ghahramani2004}. A more modern definition would claim that unsupervised architectures revolve around learning to represent data in such a way as to allow its reconstruction given only part thereof \cite{lecun2016}.
 
 \subsection{Bypassing Limitations}
 Unsupervised learning suffers from none of the aforementioned issues. 
@@ -110,20 +109,21 @@ Unsupervised learning suffers from none of the aforementioned issues.
 By definition, unsupervised learning requires no example output data, thus avoiding the need for a labeled dataset. Unlabeled data are not just abundant; as the digitalized world of the 21st century tends to occupy more and more of humanity's time, unlabeled data are being generated at an unconceivably exploding pace. On top of the purely digital data, sensors could at any time be glued to a machine, allowing it to absorb the real physical world surrounding it. The continuous presence of a human oracle is not needed to instill knowledge into an unsupervised system.
 
 \paragraph{Loss Function}
-Unsupervised learning can do away with the necessity of a predefined loss function in two ways. To begin with, constructing efficient representation schemes is task-independent and can be tied with a multitude of downstream tasks; in fact, so-called unsupervised pretraining used to be common practice in the last decade, and many specialized systems still rely on unsupervised representations \toref . This already completely resolves the issue mentioned earlier; even if we are driven by many, time-varying 'loss functions', they can all still be accomodated by a unified, lower-level representation.
+Unsupervised learning can do away with the necessity of a predefined loss function in two ways. To begin with, constructing efficient representation schemes is task-independent and can be tied with a multitude of downstream tasks; in fact, so-called unsupervised pretraining used to be common practice in the last decade, and many specialized systems still rely on unsupervised representations \cite{DBLP:journals/jmlr/ErhanBCMVB10}. This already completely resolves the issue mentioned earlier; even if we are driven by many, time-varying 'loss functions', they can all still be accomodated by a unified, lower-level representation.
 
 At the same time, generative networks, a variation of unsupervised systems that rely on sampling and approximate inference to perform variational reconstruction of some given input \toref , are actually capable of learning their own objective functions. Such architectures are the exemplar of the benefits to be gained by adopting unsupervised techniques. They are the digital equivalent of a brain that learns by analogy how to construct singular mental representations for objects belonging in the same category, and to even imagine new such objects by knowing which characteristics are its defining constants and which are the features that may vary. What is also astonishing is that a long-term change in the form of the input being provided would result in a gradual shift in the loss function being learned; is this not the kind of adaptability we would expect to see in an actually inteligent system?
 
 \subsection{Breaking Boundaries}
 Unsupervised learning brings more to the table than just making up for supervised learning's shortcomings. 
 
-\paragraph{Learning Examples vs. Learning from Examples} A common point of doubt against machine learning has been the nature of learning performed. I would like to argue that unsupervised learning nullifies this doubt, at least to an extend. First off, it has been pointed out that unsupervised learning requires no labeled data; yet it may still benefit from it, in a way that is completely congruent with human learning. A toddler does not need to inspect a thousand pictures of a cat, each time being reminded "\textit{this is a cat!}", before inferring what constitutes a cat. Similarly, an unsupervised system is able to distinguish between categories by simply being shown many unlabeled instances of them (serving as the basis for structural separation) and a few labeled ones (allowing the already distinct classes to be identified with a name) \toref . In that way, part of the weight of learning has been moved from the specific examples themselves to the learner and its environment.
+\paragraph{Learning Examples vs. Learning from Examples} A common point of doubt against machine learning has been the nature of learning performed. I would like to argue that unsupervised learning nullifies this doubt, at least to an extend. First off, it has been pointed out that unsupervised learning requires no labeled data; yet it may still benefit from it, in a way that is completely congruent with human learning. A toddler does not need to inspect a thousand pictures of a cat, each time being reminded "\textit{this is a cat!}", before inferring what constitutes a cat. Similarly, an unsupervised system is able to distinguish between categories by simply being shown manσy unlabeled instances of them (serving as the basis for structural separation) and a few labeled ones (allowing the already distinct classes to be identified with a name) \toref . In that way, part of the weight of learning has been moved from the specific examples themselves to the learner and its environment.
 
 \paragraph{Imagination and Creativity} Human intelligence is not bound to knowledge transfer; we may inspect our environment and learn from examples, but we also generate new knowledge by performing leaps of intuition. These leaps require, if at least momentarily, breaking constraints set by past knowledge, sometimes using current information; they are a product of our creative ability and our imagination. There is a lack of consensus on where creativity originates from; but approximate bayesian inference, as used in unsupervised systems, is the most suitable applicable theory for modeling it. Let's use our ability of imagination to consider that, just like bayesian networks, a  probability distribution function describes the generative process of our thoughts and ideas, with most of the probability mass at each junction point being directed towards conventional world theories, guided by our past observations and knowledge. Such a system would warrant that our thought patterns usually do not stray too far into uncharted territory, as this would equate following a chain of improbable junctions; yet, every once in a while, following unlikely paths leads to new equilibria or optimal points, forcing a redistribution of the probability mass and reshaping our world views.
 
 
 \section{Conclusion}
-Human intelligence may be thought of as the sum of a few core properties; perception, planning, memory, learning, common sense and self-awareness. The first four have already successfully been integrated within AI systems, either in the form of supervised or reinforcement learning architectures. Common sense is the next big thing to tackle; and unsupervised learning provides us the necessary framework to do just that. The world is full of spatio-temporal regularities, the manifestions of which we simply assume for the majority of the time. Unsupervised learning's ability to reconstruct the world (and hopefully, soon enough, predict its future trajectories \toref ) gives us reason to hope for new, exciting advancements in the upcoming years. Even though it does not yet address the crucial issue of meta-cognition, it at least gives a realistic, feasible direction to follow today.
+Human intelligence may be thought of as the sum of a few core properties; perception, planning, memory, learning, common sense and self-awareness. The first four have already successfully been integrated within AI systems, either in the form of supervised or reinforcement learning architectures. Common sense is the next big thing to tackle; and unsupervised learning provides us the necessary framework to do just that. The world is full of spatio-temporal regularities, the manifestions of which we simply assume for the majority of the time. Unsupervised learning's ability to reconstruct the world (and hopefully, soon enough, predict its future trajectories \cite{lecun2016}) gives us reason to hope for new, exciting advancements in the upcoming years. Even though it does not yet address the crucial issue of meta-cognition, it at least gives a realistic, feasible direction to follow today.
+
 \bibliographystyle{ieeetr}
 \bibliography{sources}
 
